# font_sdf

./: .gitignore  CMakeLists.txt  Lengyel2017FontRendering-GlyphShader.glsl  README.md
include/: bezier.h  font.h  font_file.h  glyph.h  read_char_map.h  read_cmap.h
shaders/: sdf.frag  shader.frag  test.frag
src/: bezier.cpp  font.cpp  font_file.cpp  font_file.h  glyph.cpp  glyph.h  glyph_rendering.cpp  main.cpp  main.h  read_char_map.cpp  read_char_map.h  read_cmap.cpp  read_file.cpp  read_glyf_map.cpp
